--- a/simple/package.json
+++ b/simple/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "5.2.9",
     "@angular/compiler": "5.2.9",
     "@angular/core": "5.2.9",
+    "@angular/flex-layout": "^5.0.0-beta.14",
     "@angular/forms": "5.2.9",
     "@angular/http": "5.2.9",
     "@angular/material": "^5.2.4",
@@ -26,6 +27,7 @@
     "angular-froala-wysiwyg": "^2.7.6",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ng2-ckeditor": "^1.2.0",
     "npm": "^5.8.0",
     "rxjs": "^5.5.8",
     "zone.js": "^0.8.25"
